--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
     <body>
+        <div>
         <h1>Prasad Deshpande </h1>
         <h2>Pune Univesrity</h2>
+    </div>
+     
+    <div>
+        <p>Junior KG</p>
+    </div>
     </body>
 </html>
